Align add and update of entities